fix select box alignment in instances permission dialog

--- a/scss/vendorish/_jquery.ui.selectmenu.scss
+++ b/scss/vendorish/_jquery.ui.selectmenu.scss
@@ -18,7 +18,7 @@
             a {
                 @include ellipsis;
                 display: block;
-                padding: 2px .4em;
+                padding: 2px 5px;
                 line-height: 1.5;
                 zoom: 1;
             }
@@ -40,7 +40,7 @@
 
 .ui-selectmenu-button {
     font-size: 13px;
-    line-height: 1em;
+    line-height: 13px;
     display: inline-block;
     .ui-button {
         display: inline-block;
@@ -49,7 +49,6 @@
         margin-right: .1em;
         cursor: pointer;
         zoom: 1;
-        overflow: hidden;
         *overflow: visible; /* the overflow property removes extra width in IE */
     }
 
@@ -72,9 +71,9 @@
     .ui-button-text {
         @include ellipsis;
         display: block;
-        line-height: 1.4;
+        line-height: 20px;
         text-align: left;
-        padding: 0.4em 2.1em 0.4em 1em
+        padding: 6px 29px 6px 14px
     }
 
     .ui-icon {
